--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,41 @@ iframe {
 	transform: translateX(-50%);
 }
 /* goods */
+.goods {
+	padding: 60px 0 70px;
+}
+
+.goods__title {
+	font-size: 44px;
+	font-weight: 900;
+	margin-bottom: 40px;
+}
+.goods__list {
+	display: grid;
+	grid-template-columns: repeat(4, 280px);
+	gap: 20px;
+}
+/* coctail */
+.coctail {
+}
+.goods__picture {
+	max-width: 256px;
+	min-height: 304px;
+}
+.coctail__content {
+}
+.coctail__text {
+}
+.coctail__title {
+}
+.coctail__price {
+}
+.coctail__size {
+}
+.coctail__btn {
+}
+/* /coctail */
+
 /* /goods */
 
 /* footer */
