--- a/css/style.css
+++ b/css/style.css
@@ -202,22 +202,46 @@ iframe {
 }
 /* coctail */
 .coctail {
+	display: flex;
+	flex-direction: column;
+	border-radius: 32px;
+	background-color: #fff;
+	padding: 12px;
+	height: 100%;
 }
-.goods__picture {
-	max-width: 256px;
-	min-height: 304px;
+.goods__picture img {
+	border-radius: 24px;
+	width: 100%;
 }
 .coctail__content {
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	padding: 12px;
 }
 .coctail__text {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	margin-bottom: 2px;
 }
 .coctail__title {
+	font-weight: 400;
+	margin-right: 10px;
+	font-size: 18px;
 }
 .coctail__price {
+	font-weight: 600;
 }
 .coctail__size {
+	font-weight: 600;
+	font-size: 12px;
+	color: #c1c1c1;
+	align-self: flex-end;
+	margin-bottom: 10px;
 }
 .coctail__btn {
+	margin-top: auto;
 }
 /* /coctail */
 
